--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,21 +1,26 @@
 {
+  "root": true,
   "env": {
-    "browser": true,
-    "node": false,
-    "es2021": true
+    "node": true,
+    "browser": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "overrides": [
-  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
+    "react/react-in-jsx-scope": ["off"],
+    "react/jsx-uses-react": ["off"],
+    "react/jsx-props-no-spreading": ["warn"],
+    "react/no-unescaped-entities": ["off"],
     // This is so that we can use promisify on Node's http methods
     "default-param-last": "off",
     // Easier grading rules
