--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "migration:create": "pnpm buildJS && typeorm migration:create",
     "migration:generate": "pnpm buildJS && typeorm migration:generate -d buildTypeorm/db/datasources/dev_datasource.js",
     "migration:revert": "pnpm buildJS && typeorm migration:revert -d buildTypeorm/db/datasources/dev_datasource.js",
-    "seed": "pnpm typeorm:updateDatasource && vite-node src/index.ts -- -seed",
+    "seed": "vite-node src/index.ts -- -seed",
     "generateDocs": "pnpm jsdoc -r -d docs/ -c jsdoc.json src/",
     "gitSync": "pnpm typeorm:drop && pnpm migration:run && pnpm seed"
   },
@@ -51,6 +51,7 @@
     "@fastify/jwt": "^6.6.0",
     "@fastify/middie": "^8.1.0",
     "@fastify/static": "^6.8.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "fastify": "^4.11.0",
@@ -68,6 +69,7 @@
     "@faker-js/faker": "^7.6.0",
     "@swc/cli": "^0.1.60",
     "@swc/core": "^1.3.32",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
