--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "@fastify/jwt": "^6.6.0",
     "@fastify/middie": "^8.1.0",
     "@fastify/static": "^6.8.0",
